--- a/src/main/resources/templates/projectOrder.html
+++ b/src/main/resources/templates/projectOrder.html
@@ -138,7 +138,7 @@
 							</div>
 							<div id="hide_dd" style="display: none;">
 								<span style="margin-top: 20px;">请输入身份证号</span> <input
-									type="text" name="card" value="123435231412312331"
+									type="text" name="card" value=""
 									style="margin-left: 20px; height: 30px; margin-top: 20px; width: 30%;" />
 								<input type="button" id="queryByFzr"
 									style="border-radius: 30px 30px 30px 30px; width: 100px; margin-left: 100px;"
@@ -292,7 +292,7 @@
         
          
          /*显示安排人身份证*/
-		$("[data=dd_radio]").click(function(){
+		$("[name=dd_radio]").click(function(){
 			if(true){
 				$("#hide_dd").css("display","block");
 			}
@@ -565,9 +565,8 @@
  				contentType:"application/json;charset=UTF-8",
  				dataType:"text",
 				success:function(result){
-					
 					alert("新增成功")
-					location.href="order/query";
+					location.href="/order/query";
 				}
 			});  
 		})
